Fix #2101: Improve contrast of text in control box

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -203,6 +203,8 @@ $mobile_portrait_length: 480px !default;
     --chat-correcting-color: #FFFFC0;
     --chat-head-text-color: #AAA;
 
+    --controlbox-text-color: #DDD;
+
     --chat-info-color: var(--subdued-color);
 
     --chatbox-border-radius: 0px;
